--- a/notebooks/jupyter/ERL19/Polygon_Country_Fix.ipynb
+++ b/notebooks/jupyter/ERL19/Polygon_Country_Fix.ipynb
@@ -2352,6 +2352,18 @@
    "display_name": "geo",
    "language": "python",
    "name": "geo"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
